test/conformance/chainsaw/generate/clusterpolicy/cornercases/cpol-clone-sync-create-source-after-policy/02-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cpol-clone-sync-create-source-after-policy-ns
