test/conformance/chainsaw/generate/clusterpolicy/cornercases/cpol-clone-sync-create-source-after-policy/chainsaw-step-02-apply-1-1.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cpol-clone-sync-create-source-after-policy-ns
