test/conformance/chainsaw/generate/clusterpolicy/cornercases/cpol-clone-sync-create-source-after-policy/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: cpol-clone-sync-create-source-after-policy
spec:
  rules:
  - generate:
      apiVersion: v1
      clone:
        name: regcred
        namespace: default
      kind: Secret
      name: regcred
      namespace: '{{request.object.metadata.name}}'
      synchronize: true
    match:
      any:
      - resources:
          kinds:
          - Namespace
    name: clone-secret
