test/conformance/chainsaw/generate/clusterpolicy/cornercases/cpol-clone-sync-create-source-after-policy/02-assert.yaml
apiVersion: v1
kind: Secret
metadata:
  name: regcred
  namespace: cpol-clone-sync-create-source-after-policy-ns
