test/conformance/chainsaw/generate/clusterpolicy/cornercases/cpol-clone-sync-create-source-after-policy/chainsaw-step-02-assert-1-1.yaml
apiVersion: v1
kind: Secret
metadata:
  name: regcred
  namespace: cpol-clone-sync-create-source-after-policy-ns
